# general-election-tweets

./: README.md  general-election-tweets.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
