name:                general-election-tweets
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/general-election-tweets#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , twitter-conduit
                     , text
                     , network
                     , HTTP
                     , yocto
                     , containers
                     , lens
                     , lens-action
                     , authenticate-oauth
                     , transformers-base
                     , bytestring
                     , network-uri
                     , twitter-types
                     , http-conduit == 2.1.11
                     , http-client == 0.4.31.2
                     , resourcet
                     , case-insensitive
                     , monad-logger
                     , twitter-types-lens
                     , stm-chans
                     , stm-conduit
                     , stm
                     , aeson
                     , json
                     , array
                     , time
                     , conduit-extra
                     , process
  default-language:    Haskell2010

executable general-election-tweets-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , general-election-tweets
  default-language:    Haskell2010

test-suite general-election-tweets-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , general-election-tweets
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/general-election-tweets
